<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert" />

    <Button
        android:id="@+id/alert_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_list" />

    <Button
        android:id="@+id/alert_single_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_single_choice" />

    <Button
        android:id="@+id/alert_multiple_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_multiple_choice" />

    <Button
        android:id="@+id/alert_custom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_custom_view" />

    <Button
        android:id="@+id/alert_dialog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_fragment" />

    <Button
        android:id="@+id/custom_dialog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_fragment" />

    <Button
        android:id="@+id/bottom_sheet_dialog_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet_dialog_fragment" />

</LinearLayout>